# bonfire-escrow-contract

./: .eslintrc.json  .gitignore  LICENSE  README.md  bonfire-escrow.cabal  bonfire-readme.md  build.txt  cabal.project  escrow.cabal  package.json  pnpm-lock.yaml  protocol.json  readme.md  test  tx-fee.raw  tx.raw  tx.signed  vitest.config.ts
output/datums/: example-datum.json
output/plutus-scripts/: escrow-v1.plutus  escrow.addr  escrow.hash  escrow.plutus
output/redeemers/: Complete.json  Recycle.json
policy/: policy.script  policy.skey
scripts/: query.sh  serviceFee.sh
src/Escrow/: DataToJson.hs  Datum.hs  Dispute.hs  EscrowCompiler.hs  EscrowContract.hl  EscrowContract.hs  Types.hs
src/Escrow/helios/: EscrowContract.hl
testnet-keys/: generate-keys.sh  matx.raw  matx.signed  metadata.json
testnet-keys/benefactor/: acct_0_key  addr  addr.skey  addr.vkey  chain_pub  chain_pub.hash  ext_chain_key  ext_chain_pub  mnemonic  root_key  stake_key
testnet-keys/beneficiary/: acct_0_key  addr  addr.skey  addr.vkey  chain_pub.hash  ext_chain_key  ext_chain_pub  ext_pub  mnemonic  root_key  stake_key
testnet-keys/policy/: mint-nft.sh  payment.addr  payment.skey  payment.vkey  policy.script  policy.vkey  policyID
testnet-keys/treasury/: acct_0_key  addr  addr.skey  addr.vkey  chain_pub.hash  ext_chain_key  ext_chain_pub  ext_pub  mnemonic  root_key  stake_key
tests/: escrow.test.ts
tests/helios/: escrow.test.ts
tests/lucid/: escrow.test.ts
utils/: helios.js
