Cabal-Version:      2.4
Name:               escrow-contract
Version:            1.0.0.0
Author:              Gimbalabs contributors
Maintainer:          p.napierala@mailfence.com
Build-Type:          Simple
License:             Apache-2.0
License-files:       LICENSE

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wpartial-fields
                        -Wmissing-deriving-strategies
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:      src

  exposed-modules:     Escrow.EscrowCompiler
                     , Escrow.Datum
                     , Escrow.Dispute
                     , Escrow.EscrowContract
                     , Escrow.Types
 
  build-depends:       base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-script-utils
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
                    , plutus-core
                    , tagged
                    , plutus-ledger
                    , prettyprinter
                    , cardano-api


  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
